--- a/inst/capi/h3rc/DESCRIPTION
+++ b/inst/capi/h3rc/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: h3r
+Package: h3rc
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Demonstrates Linking To C Code In R Library
 Version: 0.1.0
 Authors@R: c(
     person("David", "Cooley", ,"david.cooley.au@gmail.com", role = c("aut", "cre"))
@@ -10,4 +10,8 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+Depends:
+  h3r
+LinkingTo:
+  h3r
+RoxygenNote: 7.1.2
