--- a/inst/capi/h3rc/DESCRIPTION
+++ b/inst/capi/h3rc/DESCRIPTION
@@ -5,9 +5,9 @@ Version: 0.1.0
 Authors@R: c(
     person("David", "Cooley", ,"david.cooley.au@gmail.com", role = c("aut", "cre"))
     )
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: This is an example package showing how to call the C API provided
+  by an external package.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends:
