--- a/inst/cppapi/h3rcpp/DESCRIPTION
+++ b/inst/cppapi/h3rcpp/DESCRIPTION
@@ -5,9 +5,9 @@ Version: 0.1.0
 Authors@R: c(
     person("David", "Cooley", ,"david.cooley.au@gmail.com", role = c("aut", "cre"))
     )
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: This is an example package showing how to call the C++ API provided
+  by an external package, which in turn calls C code.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 1.0.10)
