--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(cellToBoundary)
 export(cellToLatLng)
 export(directionForNeighbor)
+export(getResolution)
 export(greatCirlceDistanceKm)
 export(greatCirlceDistanceM)
 export(greatCirlceDistanceRads)
