--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,15 @@
 
 export(cellToBoundary)
 export(cellToLatLng)
+export(cellToParent)
 export(directionForNeighbor)
+export(getBaseCellNumber)
 export(getResolution)
 export(greatCirlceDistanceKm)
 export(greatCirlceDistanceM)
 export(greatCirlceDistanceRads)
+export(isPentagon)
+export(isResClassIII)
+export(isValidCell)
 export(latLngToCell)
 useDynLib("h3r", .registration = TRUE)
