--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,11 @@ export(cellToCenterChild)
 export(cellToChildren)
 export(cellToLatLng)
 export(cellToParent)
+export(cellToVertex)
+export(cellToVertexes)
 export(directionForNeighbor)
 export(getBaseCellNumber)
+export(getIcosahedronFaces)
 export(getResolution)
 export(greatCirlceDistanceKm)
 export(greatCirlceDistanceM)
@@ -14,5 +17,8 @@ export(greatCirlceDistanceRads)
 export(isPentagon)
 export(isResClassIII)
 export(isValidCell)
+export(isValidVertex)
 export(latLngToCell)
+export(maxFaceCount)
+export(vertexToLatLng)
 useDynLib("h3r", .registration = TRUE)
