--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(cellToLatLng)
 export(cellToParent)
 export(cellToVertex)
 export(cellToVertexes)
+export(degsToRads)
 export(directionForNeighbor)
 export(getBaseCellNumber)
 export(getIcosahedronFaces)
@@ -20,5 +21,6 @@ export(isValidCell)
 export(isValidVertex)
 export(latLngToCell)
 export(maxFaceCount)
+export(radsToDegs)
 export(vertexToLatLng)
 useDynLib("h3r", .registration = TRUE)
