Added h3rGetHexagonAreaAvg functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(cellToVertexes)
 export(degsToRads)
 export(directionForNeighbor)
 export(getBaseCellNumber)
+export(getHexagonAreaAvgKm2)
+export(getHexagonAreaAvgM2)
 export(getIcosahedronFaces)
 export(getResolution)
 export(greatCirlceDistanceKm)
