Finished getHexagonEdgeLengthAvg and edgeLength

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,14 @@ export(cellToVertex)
 export(cellToVertexes)
 export(degsToRads)
 export(directionForNeighbor)
+export(edgeLengthKm)
+export(edgeLengthM)
+export(edgeLengthRads)
 export(getBaseCellNumber)
 export(getHexagonAreaAvgKm2)
 export(getHexagonAreaAvgM2)
+export(getHexagonEdgeLengthAvgKm)
+export(getHexagonEdgeLengthAvgM)
 export(getIcosahedronFaces)
 export(getResolution)
 export(greatCirlceDistanceKm)
