Finished on functions in Miscellaneous

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,9 @@ export(getHexagonAreaAvgM2)
 export(getHexagonEdgeLengthAvgKm)
 export(getHexagonEdgeLengthAvgM)
 export(getIcosahedronFaces)
+export(getNumCells)
+export(getPentagons)
+export(getRes0Cells)
 export(getResolution)
 export(greatCirlceDistanceKm)
 export(greatCirlceDistanceM)
@@ -31,6 +34,8 @@ export(isValidCell)
 export(isValidVertex)
 export(latLngToCell)
 export(maxFaceCount)
+export(pentagonCount)
 export(radsToDegs)
+export(res0CellCount)
 export(vertexToLatLng)
 useDynLib("h3r", .registration = TRUE)
