Finished most of the traversal funcs wrapping

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,15 @@ export(getResolution)
 export(greatCirlceDistanceKm)
 export(greatCirlceDistanceM)
 export(greatCirlceDistanceRads)
+export(gridDisk)
+export(gridDiskDistances)
+export(gridDiskDistancesSafe)
+export(gridDiskDistancesUnsafe)
+export(gridDiskUnsafe)
+export(gridDistance)
+export(gridPathCells)
+export(gridPathCellsSize)
+export(gridRingUnsafe)
 export(isPentagon)
 export(isResClassIII)
 export(isValidCell)
@@ -40,6 +49,7 @@ export(isValidDirectedEdge)
 export(isValidVertex)
 export(latLngToCell)
 export(maxFaceCount)
+export(maxGridDiskSize)
 export(originToDirectedEdges)
 export(pentagonCount)
 export(radsToDegs)
