--- a/inst/capi/h3rc/DESCRIPTION
+++ b/inst/capi/h3rc/DESCRIPTION
@@ -11,7 +11,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends:
-  h3r
+  h3lib
 LinkingTo:
-  h3r
+  h3lib
 RoxygenNote: 7.2.3
