--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: h3lib
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.1.0
+Version: 0.1.1
 Authors@R: c(
     person("David", "Cooley", ,"david.cooley.au@gmail.com", role = c("aut", "cre"))
+    person("Ray", "Shao", ,"rshao@symbolix.com.au", role = c("ctb", "cre"))
     )
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
