--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: h3lib
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Exposes the 'Uber' 'H3' library
 Version: 0.1.0
 Authors@R: c(
     person("David", "Cooley", ,"dcooley@symbolix.com.au", role = c("aut", "cre"))
