--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Exposes the 'Uber' 'H3' library
 Version: 0.1.1
 Authors@R: c(
-    person("David", "Cooley", ,"david.cooley.au@gmail.com", role = c("aut", "cre"))
-    person("Ray", "Shao", ,"rshao@symbolix.com.au", role = c("ctb", "cre"))
+    person("David", "Cooley", ,"david.cooley.au@gmail.com", role = c("aut", "cre")),
+    person("Ray", "Shao", ,"rshao@symbolix.com.au", role = c("ctb"))
     )
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
