--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: h3lib
 Type: Package
-Title: Exposes the 'Uber' 'H3' library
+Title: Exposes the 'Uber' 'H3' library to R packages
 Version: 0.1.1
 Authors@R: c(
     person("David", "Cooley", ,"david.cooley.au@gmail.com", role = c("aut", "cre")),
     person("Ray", "Shao", ,"rshao@symbolix.com.au", role = c("ctb"))
     )
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Registers the 'H3' source code as callable R routines.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
