--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: h3lib
 Type: Package
-Title: Exposes the 'Uber' 'H3' library to R packages
+Title: Exposes the 'Uber' 'H3' Library to R Packages
 Version: 0.1.0
+Date: 2023-08-22
 Authors@R: c(
     person("David", "Cooley", ,"dcooley@symbolix.com.au", role = c("aut", "cre")),
     person("Ray", "Shao", ,"rshao@symbolix.com.au", role = c("ctb"))
