--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
     person("David", "Cooley", ,"dcooley@symbolix.com.au", role = c("aut", "cre")),
     person("Ray", "Shao", ,"rshao@symbolix.com.au", role = c("ctb"))
     )
-Description: 'H3' is a hexagonal hierarchical spatial index developed by 'Uber' <https://www.uber.com/en-AU/blog/h3/>.
+Description: 'H3' is a hexagonal hierarchical spatial index developed by 'Uber' <https://h3geo.org/>.
   This package exposes the source code of 'H3' (written in 'C') to routines that are callable through 'R'..
 URL: https://github.com/symbolixau/h3lib
 BugReports: https://github.com/symbolixau/h3lib/issues
