--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: h3lib
 Type: Package
 Title: Exposes the 'Uber' 'H3' Library to R Packages
 Version: 0.1.2
-Date: 2023-10-10
+Date: 2023-10-11
 Authors@R: c(
     person("David", "Cooley", ,"dcooley@symbolix.com.au", role = c("aut", "cre")),
     person("Ray", "Shao", ,"rshao@symbolix.com.au", role = c("ctb"))
@@ -15,3 +15,4 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
+Suggests: tinytest
