--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: h3lib
 Type: Package
 Title: Exposes the 'Uber' 'H3' Library to R Packages
-Version: 0.1.2
-Date: 2023-10-12
+Version: 0.1.3
+Date: 2024-01-30
 Authors@R: c(
     person("David", "Cooley", ,"dcooley@symbolix.com.au", role = c("aut", "cre")),
     person("Ray", "Shao", ,"rshao@symbolix.com.au", role = c("ctb"))
@@ -16,3 +16,4 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Suggests: tinytest
+Depends: R (>= 3.0.0)
